# 404_AvatarsBot

./: .gitignore  .ruff.toml  Dockerfile  pyproject.toml
botty/: README.md  pyproject.toml
data/: texts.toml
src/: __main__.py  app.py  assets.py  commands.py  loader.py
src/core/: __init__.py  handlers.py
src/handler/: __init__.py  get_commands.py  send_picture.py  text.py
src/handler/admin/: __init__.py  admin.py
src/handler/admin/broadcast/: __init__.py  broadcast.py  cancel.py  confirm.py  post.py  subhandlers.py
src/handler/get_commands/: handler.py
src/handler/send_picture/: assets.py  handler.py
src/handler/start/: __init__.py  menu.py  start.py
src/handler/start/command/: assets.py  handler.py
src/handler/start/entry/: handler.py
src/handler/start/menu/: __init__.py  assets.py  get_another.py  handler.py  main_menu.py  menu.py  subhandlers.py
src/handler/text/: assets.py  handler.py
src/handlers/: __init__.py  start.py
src/lib/: __init__.py  callbacks.py  enums.py  keyboards.py  keys.py  texts.py
