[project]
name = ""
version = ""
description = ""
authors = []
dependencies = [
    "telegram-botty>=0.1.1",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.1.1",
    "ruff>=0.0.257",
    "black>=23.1.0",
]

[tool.pdm.scripts]
start = { cmd = "python src", env_file = ".env" }
black = "black src"
ruff = "ruff check src"
mypy = "mypy src --strict"
lint = { composite = ["black", "ruff", "mypy"] }
dev = { composite = ["lint", "start"] }

[tool.ruff]
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "RUF001"]
src = ["src"]
fix = true
show-fixes = true

[tool.isort]
profile = "black"
